patches/paste/pastey-test-suite/tests/ui/raw-mode-wrong-position.rs
use pastey::paste;

macro_rules! m {
    ($name:ident) => {
        paste! {
            struct [< $name:camel # >];
        }
    };
}

m!(r#loop);

fn main() {}
